@@ -1,3 +1,7 @@
+2006-03-25	ujwal
+
+	* Added back support to show/hide first tab.
+
 2006-03-23	ujwal
 
 	* Made window metallized to get full Safari tab effect.
